--- a/package.json
+++ b/package.json
@@ -12,25 +12,22 @@
     "deploy": "gh-pages -d out -t true"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "antd": "^4.9.1",
     "less": "^3.12.2",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-typed": "^1.2.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
     "remark-parse": "^9.0.0",
     "unified": "^9.2.0",
     "uuid": "^8.3.2"
   },
-  "devDependencies": {
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "gh-pages": "^3.1.0",
-    "gray-matter": "^4.0.2",
-    "typescript": "^4.1.2"
-  }
+  "devDependencies": {}
 }
