--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "export": "next export && touch out/.nojekyll",
     "build-ssg": "next build && next export && touch out/.nojekyll",
-    "deploy": "gh-pages -d out -t true"
+    "deploy": "gh-pages -d out -t true",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && rm -rf .next/ && yarn install && yarn dev"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -20,14 +21,21 @@
     "@zeit/next-sass": "^1.0.1",
     "less": "^3.12.2",
     "next": "10.0.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.6.2",
+    "node-sass": "^5.0.0",
+    "nouislider": "^14.6.3",
     "react": "17.0.1",
+    "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
+    "react-slick": "^0.27.14",
     "react-typed": "^1.2.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
     "remark-parse": "^9.0.0",
     "unified": "^9.2.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webpack": "^5.15.0"
   },
   "devDependencies": {}
 }
